Set up Reflector A.asset, updated Enigma.cs, updated design doc

--- a/Design Doc/Enigma.tex
+++ b/Design Doc/Enigma.tex
@@ -18,6 +18,9 @@
 
 \usepackage{titling}
 \usepackage{multicol}
+\usepackage{amssymb}
+
+\usepackage{supertabular}
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
