--- a/Design Doc/rotors.tex
+++ b/Design Doc/rotors.tex
@@ -4,143 +4,172 @@
 The rotors in the machine.
 
 \begin{multicols}{2}
+
 \subsection{Rotor I}
-A > E\\
-B > K\\
-C > M\\
-D > F\\
-E > L\\
-F > G\\
-G > D\\
-H > Q\\
-I > V\\
-J > Z\\
-K > N\\
-L > T\\
-M > O\\
-N > W\\
-O > Y\\
-P > H\\
-Q > X\\
-R > U\\
-S > S\\
-T > P\\
-U > A\\
-V > I\\
-W > B\\
-X > R\\
-Y > C\\
-Z > J\\
+\begin{supertabular}{rcl}
+A & $\Rightarrow$ & E \\
+B & $\Rightarrow$ & K \\
+C & $\Rightarrow$ & M \\
+D & $\Rightarrow$ & F \\
+E & $\Rightarrow$ & L \\
+F & $\Rightarrow$ & G \\
+G & $\Rightarrow$ & D \\
+H & $\Rightarrow$ & Q \\
+I & $\Rightarrow$ & V \\
+J & $\Rightarrow$ & Z \\
+K & $\Rightarrow$ & N \\
+L & $\Rightarrow$ & T \\
+M & $\Rightarrow$ & O \\
+N & $\Rightarrow$ & W \\
+O & $\Rightarrow$ & Y \\
+P & $\Rightarrow$ & H \\
+Q & $\Rightarrow$ & X$\circlearrowright$ \\
+R & $\Rightarrow$ & U \\
+S & $\Rightarrow$ & S \\
+T & $\Rightarrow$ & P \\
+U & $\Rightarrow$ & A \\
+V & $\Rightarrow$ & I \\
+W & $\Rightarrow$ & B \\
+X & $\Rightarrow$ & R \\
+Y & $\Rightarrow$ & C \\
+Z & $\Rightarrow$ & J \\
+\end{supertabular}
 
 \subsection{Rotor II}
-A > A\\
-B > J\\
-C > D\\
-D > K\\
-E > S\\
-F > I\\
-G > R\\
-H > U\\
-I > X\\
-J > B\\
-K > L\\
-L > H\\
-M > W\\
-N > T\\
-O > M\\
-P > C\\
-Q > Q\\
-R > G\\
-S > Z\\
-T > N\\
-U > P\\
-V > Y\\
-W > F\\
-X > V\\
-Y > O\\
-Z > E\\
+\begin{supertabular}{rcl}
+A & $\Rightarrow$ & A \\
+B & $\Rightarrow$ & J \\
+C & $\Rightarrow$ & D \\
+D & $\Rightarrow$ & K \\
+E & $\Rightarrow$ & S$\circlearrowright$ \\
+F & $\Rightarrow$ & I \\
+G & $\Rightarrow$ & R \\
+H & $\Rightarrow$ & U \\
+I & $\Rightarrow$ & X \\
+J & $\Rightarrow$ & B \\
+K & $\Rightarrow$ & L \\
+L & $\Rightarrow$ & H \\
+M & $\Rightarrow$ & W \\
+N & $\Rightarrow$ & T \\
+O & $\Rightarrow$ & M \\
+P & $\Rightarrow$ & C \\
+Q & $\Rightarrow$ & Q \\
+R & $\Rightarrow$ & G \\
+S & $\Rightarrow$ & Z \\
+T & $\Rightarrow$ & N \\
+U & $\Rightarrow$ & P \\
+V & $\Rightarrow$ & Y \\
+W & $\Rightarrow$ & F \\
+X & $\Rightarrow$ & V \\
+Y & $\Rightarrow$ & O \\
+Z & $\Rightarrow$ & E \\
+\end{supertabular}
 
 \subsection{Rotor III}
-A > B\\
-B > D\\
-C > F\\
-D > H\\
-E > J\\
-F > L\\
-G > C\\
-H > P\\
-I > R\\
-J > T\\
-K > X\\
-L > V\\
-M > Z\\
-N > N\\
-O > Y\\
-P > E\\
-Q > I\\
-R > W\\
-S > G\\
-T > A\\
-U > K\\
-V > M\\
-W > U\\
-X > S\\
-Y > Q\\
-Z > O\\
+\begin{supertabular}{rcl}
+A & $\Rightarrow$ & B \\
+B & $\Rightarrow$ & D \\
+C & $\Rightarrow$ & F \\
+D & $\Rightarrow$ & H \\
+E & $\Rightarrow$ & J \\
+F & $\Rightarrow$ & L \\
+G & $\Rightarrow$ & C \\
+H & $\Rightarrow$ & P \\
+I & $\Rightarrow$ & R \\
+J & $\Rightarrow$ & T \\
+K & $\Rightarrow$ & X \\
+L & $\Rightarrow$ & V \\
+M & $\Rightarrow$ & Z \\
+N & $\Rightarrow$ & N \\
+O & $\Rightarrow$ & Y \\
+P & $\Rightarrow$ & E \\
+Q & $\Rightarrow$ & I \\
+R & $\Rightarrow$ & W \\
+S & $\Rightarrow$ & G \\
+T & $\Rightarrow$ & A \\
+U & $\Rightarrow$ & K \\
+V & $\Rightarrow$ & M$\circlearrowright$ \\
+W & $\Rightarrow$ & U \\
+X & $\Rightarrow$ & S \\
+Y & $\Rightarrow$ & Q \\
+Z & $\Rightarrow$ & O \\
+\end{supertabular}
 
 \subsection{Rotor IV}
-A > E\\
-B > S\\
-C > O\\
-D > V\\
-E > P\\
-F > Z\\
-G > J\\
-H > A\\
-I > Y\\
-J > Q\\
-K > U\\
-L > I\\
-M > R\\
-N > H\\
-O > X\\
-P > L\\
-Q > N\\
-R > F\\
-S > T\\
-T > G\\
-U > K\\
-V > D\\
-W > C\\
-X > M\\
-Y > W\\
-Z > B\\
+\begin{supertabular}{rcl}
+A & $\Rightarrow$ & E \\
+B & $\Rightarrow$ & S \\
+C & $\Rightarrow$ & O \\
+D & $\Rightarrow$ & V \\
+E & $\Rightarrow$ & P \\
+F & $\Rightarrow$ & Z \\
+G & $\Rightarrow$ & J \\
+H & $\Rightarrow$ & A \\
+I & $\Rightarrow$ & Y \\
+J & $\Rightarrow$ & Q$\circlearrowright$ \\
+K & $\Rightarrow$ & U \\
+L & $\Rightarrow$ & I \\
+M & $\Rightarrow$ & R \\
+N & $\Rightarrow$ & H \\
+O & $\Rightarrow$ & X \\
+P & $\Rightarrow$ & L \\
+Q & $\Rightarrow$ & N \\
+R & $\Rightarrow$ & F \\
+S & $\Rightarrow$ & T \\
+T & $\Rightarrow$ & G \\
+U & $\Rightarrow$ & K \\
+V & $\Rightarrow$ & D \\
+W & $\Rightarrow$ & C \\
+X & $\Rightarrow$ & M \\
+Y & $\Rightarrow$ & W \\
+Z & $\Rightarrow$ & B \\
+\end{supertabular}
 
 \subsection{Rotor V}
-A > V\\
-B > Z\\
-C > B\\
-D > R\\
-E > G\\
-F > I\\
-G > T\\
-H > Y\\
-I > U\\
-J > P\\
-K > S\\
-L > D\\
-M > N\\
-N > H\\
-O > L\\
-P > X\\
-Q > A\\
-R > W\\
-S > M\\
-T > J\\
-U > Q\\
-V > O\\
-W > F\\
-X > E\\
-Y > C\\
-Z > K\\
+\begin{supertabular}{rcl}
+A & $\Rightarrow$ & V \\
+B & $\Rightarrow$ & Z \\
+C & $\Rightarrow$ & B \\
+D & $\Rightarrow$ & R \\
+E & $\Rightarrow$ & G \\
+F & $\Rightarrow$ & I \\
+G & $\Rightarrow$ & T \\
+H & $\Rightarrow$ & Y \\
+I & $\Rightarrow$ & U \\
+J & $\Rightarrow$ & P \\
+K & $\Rightarrow$ & S \\
+L & $\Rightarrow$ & D \\
+M & $\Rightarrow$ & N \\
+N & $\Rightarrow$ & H \\
+O & $\Rightarrow$ & L \\
+P & $\Rightarrow$ & X \\
+Q & $\Rightarrow$ & A \\
+R & $\Rightarrow$ & W \\
+S & $\Rightarrow$ & M \\
+T & $\Rightarrow$ & J \\
+U & $\Rightarrow$ & Q \\
+V & $\Rightarrow$ & O \\
+W & $\Rightarrow$ & F \\
+X & $\Rightarrow$ & E \\
+Y & $\Rightarrow$ & C \\
+Z & $\Rightarrow$ & K$\circlearrowright$ \\
+\end{supertabular}
+
+\subsection{Reflector A}
+\begin{supertabular}{rcl}
+A & $\Rightarrow$ & E \\
+B & $\Rightarrow$ & J \\
+C & $\Rightarrow$ & M \\
+D & $\Rightarrow$ & Z \\
+F & $\Rightarrow$ & L \\
+G & $\Rightarrow$ & Y \\
+H & $\Rightarrow$ & X \\
+I & $\Rightarrow$ & V \\
+K & $\Rightarrow$ & W \\
+N & $\Rightarrow$ & R \\
+O & $\Rightarrow$ & Q \\
+P & $\Rightarrow$ & U \\
+S & $\Rightarrow$ & T \\
+\end{supertabular}
+
 \end{multicols}
