Updated design doc for readability, started recoding enigma machine from ground up based on Code Bullets video.

--- a/Design Doc/rotors.tex
+++ b/Design Doc/rotors.tex
@@ -1,175 +1,35 @@
 %!TeX root=Enigma.tex
 \section{Rotors}
 
-The rotors in the machine.
+The rotors in the machine.  Characters marked with $\circlearrowright$ denote the turnover point for that rotor.
 
-\begin{multicols}{2}
-
-\subsection{Rotor I}
-\begin{supertabular}{rcl}
-A & $\Rightarrow$ & E \\
-B & $\Rightarrow$ & K \\
-C & $\Rightarrow$ & M \\
-D & $\Rightarrow$ & F \\
-E & $\Rightarrow$ & L \\
-F & $\Rightarrow$ & G \\
-G & $\Rightarrow$ & D \\
-H & $\Rightarrow$ & Q \\
-I & $\Rightarrow$ & V \\
-J & $\Rightarrow$ & Z \\
-K & $\Rightarrow$ & N \\
-L & $\Rightarrow$ & T \\
-M & $\Rightarrow$ & O \\
-N & $\Rightarrow$ & W \\
-O & $\Rightarrow$ & Y \\
-P & $\Rightarrow$ & H \\
-Q & $\Rightarrow$ & X$\circlearrowright$ \\
-R & $\Rightarrow$ & U \\
-S & $\Rightarrow$ & S \\
-T & $\Rightarrow$ & P \\
-U & $\Rightarrow$ & A \\
-V & $\Rightarrow$ & I \\
-W & $\Rightarrow$ & B \\
-X & $\Rightarrow$ & R \\
-Y & $\Rightarrow$ & C \\
-Z & $\Rightarrow$ & J \\
-\end{supertabular}
-
-\subsection{Rotor II}
-\begin{supertabular}{rcl}
-A & $\Rightarrow$ & A \\
-B & $\Rightarrow$ & J \\
-C & $\Rightarrow$ & D \\
-D & $\Rightarrow$ & K \\
-E & $\Rightarrow$ & S$\circlearrowright$ \\
-F & $\Rightarrow$ & I \\
-G & $\Rightarrow$ & R \\
-H & $\Rightarrow$ & U \\
-I & $\Rightarrow$ & X \\
-J & $\Rightarrow$ & B \\
-K & $\Rightarrow$ & L \\
-L & $\Rightarrow$ & H \\
-M & $\Rightarrow$ & W \\
-N & $\Rightarrow$ & T \\
-O & $\Rightarrow$ & M \\
-P & $\Rightarrow$ & C \\
-Q & $\Rightarrow$ & Q \\
-R & $\Rightarrow$ & G \\
-S & $\Rightarrow$ & Z \\
-T & $\Rightarrow$ & N \\
-U & $\Rightarrow$ & P \\
-V & $\Rightarrow$ & Y \\
-W & $\Rightarrow$ & F \\
-X & $\Rightarrow$ & V \\
-Y & $\Rightarrow$ & O \\
-Z & $\Rightarrow$ & E \\
-\end{supertabular}
-
-\subsection{Rotor III}
-\begin{supertabular}{rcl}
-A & $\Rightarrow$ & B \\
-B & $\Rightarrow$ & D \\
-C & $\Rightarrow$ & F \\
-D & $\Rightarrow$ & H \\
-E & $\Rightarrow$ & J \\
-F & $\Rightarrow$ & L \\
-G & $\Rightarrow$ & C \\
-H & $\Rightarrow$ & P \\
-I & $\Rightarrow$ & R \\
-J & $\Rightarrow$ & T \\
-K & $\Rightarrow$ & X \\
-L & $\Rightarrow$ & V \\
-M & $\Rightarrow$ & Z \\
-N & $\Rightarrow$ & N \\
-O & $\Rightarrow$ & Y \\
-P & $\Rightarrow$ & E \\
-Q & $\Rightarrow$ & I \\
-R & $\Rightarrow$ & W \\
-S & $\Rightarrow$ & G \\
-T & $\Rightarrow$ & A \\
-U & $\Rightarrow$ & K \\
-V & $\Rightarrow$ & M$\circlearrowright$ \\
-W & $\Rightarrow$ & U \\
-X & $\Rightarrow$ & S \\
-Y & $\Rightarrow$ & Q \\
-Z & $\Rightarrow$ & O \\
-\end{supertabular}
-
-\subsection{Rotor IV}
-\begin{supertabular}{rcl}
-A & $\Rightarrow$ & E \\
-B & $\Rightarrow$ & S \\
-C & $\Rightarrow$ & O \\
-D & $\Rightarrow$ & V \\
-E & $\Rightarrow$ & P \\
-F & $\Rightarrow$ & Z \\
-G & $\Rightarrow$ & J \\
-H & $\Rightarrow$ & A \\
-I & $\Rightarrow$ & Y \\
-J & $\Rightarrow$ & Q$\circlearrowright$ \\
-K & $\Rightarrow$ & U \\
-L & $\Rightarrow$ & I \\
-M & $\Rightarrow$ & R \\
-N & $\Rightarrow$ & H \\
-O & $\Rightarrow$ & X \\
-P & $\Rightarrow$ & L \\
-Q & $\Rightarrow$ & N \\
-R & $\Rightarrow$ & F \\
-S & $\Rightarrow$ & T \\
-T & $\Rightarrow$ & G \\
-U & $\Rightarrow$ & K \\
-V & $\Rightarrow$ & D \\
-W & $\Rightarrow$ & C \\
-X & $\Rightarrow$ & M \\
-Y & $\Rightarrow$ & W \\
-Z & $\Rightarrow$ & B \\
-\end{supertabular}
-
-\subsection{Rotor V}
-\begin{supertabular}{rcl}
-A & $\Rightarrow$ & V \\
-B & $\Rightarrow$ & Z \\
-C & $\Rightarrow$ & B \\
-D & $\Rightarrow$ & R \\
-E & $\Rightarrow$ & G \\
-F & $\Rightarrow$ & I \\
-G & $\Rightarrow$ & T \\
-H & $\Rightarrow$ & Y \\
-I & $\Rightarrow$ & U \\
-J & $\Rightarrow$ & P \\
-K & $\Rightarrow$ & S \\
-L & $\Rightarrow$ & D \\
-M & $\Rightarrow$ & N \\
-N & $\Rightarrow$ & H \\
-O & $\Rightarrow$ & L \\
-P & $\Rightarrow$ & X \\
-Q & $\Rightarrow$ & A \\
-R & $\Rightarrow$ & W \\
-S & $\Rightarrow$ & M \\
-T & $\Rightarrow$ & J \\
-U & $\Rightarrow$ & Q \\
-V & $\Rightarrow$ & O \\
-W & $\Rightarrow$ & F \\
-X & $\Rightarrow$ & E \\
-Y & $\Rightarrow$ & C \\
-Z & $\Rightarrow$ & K$\circlearrowright$ \\
-\end{supertabular}
-
-\subsection{Reflector A}
-\begin{supertabular}{rcl}
-A & $\Rightarrow$ & E \\
-B & $\Rightarrow$ & J \\
-C & $\Rightarrow$ & M \\
-D & $\Rightarrow$ & Z \\
-F & $\Rightarrow$ & L \\
-G & $\Rightarrow$ & Y \\
-H & $\Rightarrow$ & X \\
-I & $\Rightarrow$ & V \\
-K & $\Rightarrow$ & W \\
-N & $\Rightarrow$ & R \\
-O & $\Rightarrow$ & Q \\
-P & $\Rightarrow$ & U \\
-S & $\Rightarrow$ & T \\
-\end{supertabular}
-
-\end{multicols}
+\begin{tabular}{|c||c|c|c|c|c|}
+\hline
+Base Character & Rotor I & Rotor II & Rotor III & Rotor IV & Rotor V\\\hline\hline
+A & E & A & B & E & V\\\hline
+B & K & J & D & S & Z\\\hline
+C & M & D & F & O & B\\\hline
+D & F & K & H & V & R\\\hline
+E & L & $\circlearrowright$S & J & P & G\\\hline
+F & G & I & L & Z & I\\\hline
+G & D & R & C & J & T\\\hline
+H & Q & U & P & A & Y\\\hline
+I & V & X & R & Y & U\\\hline
+J & Z & B & T & $\circlearrowright$Q & P\\\hline
+K & N & L & X & U & S\\\hline
+L & T & H & V & I & D\\\hline
+M & O & W & Z & R & N\\\hline
+N & W & T & N & H & H\\\hline
+O & Y & M & Y & X & L\\\hline
+P & H & C & E & L & X\\\hline
+Q & $\circlearrowright$X & Q & I & N & A\\\hline
+R & U & G & W & F & W\\\hline
+S & S & Z & G & T & M\\\hline
+T & P & N & A & G & J\\\hline
+U & A & P & K & K & Q\\\hline
+V & I & Y & $\circlearrowright$M & D & O\\\hline
+W & B & F & U & C & F\\\hline
+X & R & V & S & M & E\\\hline
+Y & C & O & Q & W & C\\\hline
+Z & J & E & O & B & $\circlearrowright$K\\\hline
+\end{tabular}
